--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,164 @@
 */
 
 .page {
+  font-family: var(--main-font, 'Inter-Variable', sans-serif);
+  font-size: 18px;
+  background-color: bisque; /* delete! */
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--main-font-weight, 400);
 }
+
+/* header */
+
+.header {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  row-gap: 20px;
+  margin: 100px auto;
+  border: var(--border);
+  padding: var(--header-container-padding-y) var(--header-container-padding-x);
+  font-family: var(--accent-font, 'PressStart2P-Regular', sans-serif);
+  background-color: var(--bg-color, #fff);
+  inline-size: var(--header-container-width);
+}
+
+.header__logo {
+  font-size: var(--logo-font-size);
+  text-decoration: none;
+}
+
+.header__title {
+  font-size: var(--h1-font-size);
+  text-transform: uppercase;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  row-gap: 50px;
+}
+
+/* card */
+
+.cards-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
+.card-item {
+  border: var(--border);
+  inline-size: var(--card-container-width);
+}
+
+.card {
+  background-color: var(--bg-color, #fff);
+}
+
+.card__title {
+  border-block-end: var(--border);
+  padding: 3px 24px 3px 10px;
+  font-size: 18px;
+  font-variation-settings: "wght" var(--title-font-weight, 700);
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.card__image {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+  max-block-size: 100%;
+}
+
+.watermark {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  opacity: 0.5;
+  font-family: var(--accent-font, 'PressStart2P-Regular', sans-serif);
+  font-size: 14px;
+  text-shadow: -1px 0 var(--stroke-color, var(--stroke-color, #fff)), 0 1px var(--stroke-color, var(--stroke-color, #fff)), 1px 0 var(--stroke-color, var(--stroke-color, #fff)), 0 -1px var(--stroke-color, var(--stroke-color, #fff));
+  mix-blend-mode: hard-light;
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 27px;
+  border-block-start: var(--border);
+  padding: 25px;
+}
+
+.card__buttons {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  column-gap: 12px;
+  padding: 0 25px 25px;
+}
+
+/* styles buttons */
+
+.button {
+  border: var(--border);
+  font-family: var(--accent-font, 'PressStart2P-Regular', sans-serif);
+  font-size: 14px;
+  line-height: 0.9;
+  background-color: var(--bg-color);
+}
+
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+  inline-size: 27px;
+  block-size: 24px;
+}
+
+.card__like-button {
+  padding: 13px 37px;
+}
+
+/* floppy */
+
+.floppy__button {
+  display: flex;
+  place-items: center;
+  gap: 8px;
+  margin-block-end: 100px;
+  padding: 15px 20px;
+}
+
+.floppy-icon {
+  width: 21px;
+  height: 21px;
+}
+
+@media (width <= 375px) {
+  .header {
+    inline-size: 100%;
+  }
+
+  .card-item {
+    inline-size: 100%;
+  }
+
+  .floppy__button {
+    flex-direction: column;
+  }
+}
+
+@supports((text-stroke: 1px var(--stroke-color, #fff))) or (-webkit-text-stroke: 1px var(--stroke-color, #fff)) {
+  .watermark {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--stroke-color, #fff);
+    text-stroke: 1px var(--stroke-color, #fff);
+  }
+} 
