--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,11 @@
 .page {
   font-family: var(--main-font, 'Inter-Variable', sans-serif);
   font-size: 18px;
-  background-color: bisque; /* delete! */
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-variation-settings: "wght" var(--main-font-weight, 400);
@@ -24,7 +28,8 @@
 .header {
   display: flex;
   flex-direction: column;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   row-gap: 20px;
   margin: 100px auto;
   border: var(--border);
@@ -47,7 +52,8 @@
 .content {
   display: flex;
   flex-direction: column;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   row-gap: 50px;
 }
 
@@ -77,6 +83,33 @@
 
 .image-wrapper {
   position: relative;
+}
+.contrast {
+  filter: contrast(50%);
+}
+
+.brightness {
+  filter: brightness(300%);
+}
+
+.saturate {
+  filter: saturate(50%);
+}
+
+.invert {
+  filter: invert(0.7);
+}
+
+.hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.blur {
+  filter: blur(0.3rem);
+}
+
+.mix-filter {
+  filter: contrast(2) brightness(200%);
 }
 
 .card__image {
@@ -119,6 +152,7 @@
 
 .button {
   border: var(--border);
+  border-radius: none;
   font-family: var(--accent-font, 'PressStart2P-Regular', sans-serif);
   font-size: 14px;
   line-height: 0.9;
@@ -140,15 +174,51 @@
 
 .floppy__button {
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   gap: 8px;
   margin-block-end: 100px;
   padding: 15px 20px;
 }
 
 .floppy-icon {
-  width: 21px;
-  height: 21px;
+  inline-size: 21px;
+  block-size: 21px;
+}
+
+/* dialog */
+
+.pop-up[open] {
+  position: fixed;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 30px 20px;
+  border: var(--border);
+  padding: 30px;
+  max-inline-size: 353px;
+}
+
+.pop-up[open]::backdrop {
+  opacity: 0.75;
+  background: linear-gradient(180deg, #e7e7e7 0%, #1a1a1a 100%);
+} 
+
+.pop-up__icon {
+  align-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.pop-up__description {
+  font-family: var(--accent-font, 'PressStart2P-Regular', sans-serif);
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+.pop-up__button {
+  grid-column: 1 / -1;
+  padding-block: 12.5px;
 }
 
 @media (width <= 375px) {
@@ -160,9 +230,17 @@
     inline-size: 100%;
   }
 
+  .card__title {
+    padding: 4px 10px 6px;
+  }
+
   .floppy__button {
     flex-direction: column;
   }
+
+  .pop-up[open] {
+    padding-inline: 42px;
+  } 
 }
 
 @supports((text-stroke: 1px var(--stroke-color, #fff))) or (-webkit-text-stroke: 1px var(--stroke-color, #fff)) {
