--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@
   display: flex;
   justify-content: end;
   align-items: center;
-  column-gap: 2px;
+  column-gap: 6px;
   padding: 0 25px 25px;
 }
 
@@ -201,16 +201,74 @@
 }
 
 .like-icon {
+  transform-origin: center;
   inline-size: 39px;
   block-size: 36px;
+}
+
+.contour {
+  transition: fill 0.1s linear;
+}
+
+.core {
+  transition: fill 0.3s linear 0.03s;
+}
+
+.main-body {
+  transition: fill 0.3s linear;
 }
 
 .sparks {
   opacity: 0;
 }
 
+.like-icon:hover .core {
+  fill: var(--animation-fill-color-dark, #000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--animation-fill-color-dark, #000);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-colort, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--icon-contour-accent, #ff0000);
+  transition: fill 0.3s linear 0.06s;
+  animation: sparks 0.3s ease-in 0.3s;
+}
+
+.like-icon.is-liked .heart {
+  animation: growth 0.3s ease-in 0.1s;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s;
+}
+
 .card__like-button {
-  padding: 13px 37px;
+  padding: 9px 17px;
+  min-inline-size: 130px;
 }
 
 .button__text {
