--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,11 +1,6 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 
 :root {
-  --bg-image: 
-    repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-    repeating-linear-gradient(180deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-    linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a 100%);
-  ;
   --main-font: 'Inter-Variable';
   --accent-font: 'PressStart2P-Regular';
   --main-font-weight: 400;
@@ -21,7 +16,11 @@
 
   --border: 2px solid #000;
 
-  --bg-color: #fff;
+  --bg-color: 
+    repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(180deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a 100%);
+  --bg-color-element: #fff;
   --text-color: #000;
   --text-color-light: #fff;
   --stroke-color: #fff;
