--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,8 +4,8 @@
   font-family: 'Inter-Variable';
   src:
     local('Inter-Variable'),
-    url('./Inter-Variable.woff2') format('woff2 supports variations'),
-    url('./Inter-Variable.woff2') format('woff2-variations');
+    url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations');
   font-weight: 400 785;
   font-display: swap;
 }
@@ -13,9 +13,8 @@
 @font-face {
   font-family: 'PressStart2P';
   src:
-    local('PressStart2P-Regular'),
     local('PressStart2P'),
-    url('./PressStart2P-Regular.woff') format('woff');
+    url(./PressStart2P-Regular.woff) format('woff');
   font-weight: 400;
   font-display: swap;
 }
